Putting on log-in, fixing code, and added stuff

--- a/Html/Home.html
+++ b/Html/Home.html
@@ -1,12 +1,27 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/Styles 1.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/x-icon" href="../css/images/Fav.ico">
+    <title>Smart Scheduling</title>
 </head>
 <body>
-    <h1>Header</h1>
+    <h1>Schedules</h1>
+    <table>
+    <tr>
+    <th colspan="3">Calendar</th>
+    </tr>
+    <tr>
+    <td>January</td>
+    <td>february</td>
+    <td>March</td>
+    </tr>
+    <tr>
+    <td>adw</td>
+    <td>aojkaokao</td>
+    <td>sfwfa</td>
+    </tr>
+    </table>
 </body>
 </html>
