Changes Home.html and style.css

--- a/Html/Home.html
+++ b/Html/Home.html
@@ -8,20 +8,31 @@
 </head>
 <body>
     <h1>Schedules</h1>
-    <table>
+  <table>
+    <!-- Header Row -->
     <tr>
-    <th colspan="3">Calendar</th>
+      <td colspan="4" class="logo">Logo</td>
+    </tr>
+
+    <!-- Months Grid -->
+    <tr>
+      <td>January</td>
+      <td>February</td>
+      <td>March</td>
+      <td>April</td>
     </tr>
     <tr>
-    <td>January</td>
-    <td>february</td>
-    <td>March</td>
+      <td>May</td>
+      <td>June</td>
+      <td>July</td>
+      <td>August</td>
     </tr>
     <tr>
-    <td>adw</td>
-    <td>aojkaokao</td>
-    <td>sfwfa</td>
+      <td>September</td>
+      <td>October</td>
+      <td>November</td>
+      <td>December</td>
     </tr>
-    </table>
+  </table>
 </body>
 </html>
