Change the whole thing, made it into a website for booking hotels.
Changes in code Home.html and style.css

--- a/Html/Home.html
+++ b/Html/Home.html
@@ -1,38 +1,34 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="icon" type="image/x-icon" href="../css/images/Fav.ico">
-    <title>Smart Scheduling</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hotel Homepage</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>Schedules</h1>
-  <table>
-    <!-- Header Row -->
-    <tr>
-      <td colspan="4" class="logo">Logo</td>
-    </tr>
 
-    <!-- Months Grid -->
-    <tr>
-      <td>January</td>
-      <td>February</td>
-      <td>March</td>
-      <td>April</td>
-    </tr>
-    <tr>
-      <td>May</td>
-      <td>June</td>
-      <td>July</td>
-      <td>August</td>
-    </tr>
-    <tr>
-      <td>September</td>
-      <td>October</td>
-      <td>November</td>
-      <td>December</td>
-    </tr>
-  </table>
+  <header class="navbar">
+    <div class="logo">Hotel Haven</div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Rooms</a></li>
+        <li><a href="#">Facilities</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <button class="book-btn">Book Now</button>
+  </header>
+
+  <button class="menu-btn">☰ Menu</button>
+
+  <section class="hero">
+    <h1>Experience Comfort & Luxury</h1>
+    <p>Welcome to Hotel Haven — your perfect getaway destination.</p>
+    <button class="hero-btn">Explore Rooms</button>
+  </section>
+
 </body>
 </html>
