--- a/Html/Contact.html
+++ b/Html/Contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hotel Homepage</title>
-  <link rel="stylesheet" href="/css/Home.css">
+  <link rel="stylesheet" href="/css/Contact.css">
 </head>
 <body>
 
@@ -20,16 +20,15 @@
     </nav>
   </header>
 
-  <button class="menu-btn">☰ Menu</button>
+  <section class="contact">
+  <div class="contact-box">
+    <h1>Contact Us</h1>
+    <p>We’d love to hear from you! For any inquiries, reach us at:</p>
+    <a href="mailto:qksdacula@tip.edu.ph" class="email">qksdacula@tip.edu.ph</a>
+  </div>
+</section>
 
-  <section class="hero">
-    <h1>Experience Comfort & Luxury</h1>
-    <p>Welcome to Hotel Haven — your perfect getaway destination.</p>
-    <div class="hero-buttons">
-      <a href="/Html/Rooms.html"><button class="hero-btn">Explore Rooms</button></a>
-      <a href="/Html/Contact.html"><button class="hero-btn">Book Now</button></a>
-    </div>
-  </section>
+  <button class="menu-btn">☰ Menu</button>
 
 </body>
 </html>
