Change file paths and made it into hirarchy

--- a/Html/Homepage/Nav/Facilities.html
+++ b/Html/Homepage/Nav/Facilities.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Facilities</title>
-  <link rel="stylesheet" href="/css/Facilities.css">
+  <link rel="stylesheet" href="../css/Facilities.css">
 </head>
 <body>
 
@@ -12,10 +12,10 @@
     <div class="logo">Hotel Haven</div>
     <nav>
       <ul class="nav-links">
-        <li><a href="/Html/Home.html">Home</a></li>
-        <li><a href="/Html/Rooms.Html">Rooms</a></li>
-        <li><a href="/Html/Facilities.html" target="_self">Facilities</a></li>
-        <li><a href="/Html/Contact.html" target="_self">Contact</a></li>
+        <li><a href="../Html/Homepage/Home.html">Home</a></li>
+        <li><a href="../Html/Homepage/Nav/Rooms.html">Rooms</a></li>
+        <li><a href="../Html/Homepage/Nav/Facilities.html" target="_self">Facilities</a></li>
+        <li><a href="../Html/Homepage/Nav/Contact.html" target="_self">Contact</a></li>
       </ul>
     </nav>
   </header>
