--- a/Html/Homepage/Log-in.html
+++ b/Html/Homepage/Log-in.html
@@ -10,7 +10,7 @@
 <body>
   <div class="Layout">
     <h1>Login</h1>
-      <form action="../Html/Home.html" target="_self">
+      <form action="../Homepage/Home.html" target="_self">
       <input type="text" name="username" placeholder="Username" required><br>
       <input type="password" name="password" placeholder="Password" required><br>
       <button type="submit">Login</button>
