--- a/Html/Log-in.html
+++ b/Html/Log-in.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css /Home.css">
     <link rel="icon" type="image/x-icon" href="../css/images/Fav.ico">
   <title>Login Page</title> 
 </head>
 <body>
   <div class="Layout">
     <h1>Login</h1>
-      <form action="../Homepage/Home.html" target="_self">
+      <form action="/Homepage/Home.html" target="_self">
       <input type="text" name="username" placeholder="Username" required><br>
       <input type="password" name="password" placeholder="Password" required><br>
       <button type="submit">Login</button>
