--- a/Html/Homepage/Home.html
+++ b/Html/Homepage/Home.html
@@ -26,8 +26,8 @@
     <h1>Experience Comfort & Luxury</h1>
     <p>Welcome to Hotel Haven — your perfect getaway destination.</p>
     <div class="hero-buttons">
-      <a href="/Html/Rooms.html"><button class="hero-btn">Explore Rooms</button></a>
-      <a href="/Html/Contact.html"><button class="hero-btn">Book Now</button></a>
+      <a href="/Html/Homepage/Nav/Contact.html"><button class="hero-btn">Explore Rooms</button></a>
+      <a href="/Html/Homepage/Nav/Rooms.html"><button class="hero-btn">Book Now</button></a>
     </div>
   </section>
 
