Change the titles

--- a/Html/Log-in.html
+++ b/Html/Log-in.html
@@ -2,10 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Log-in Page</title>
     <link rel="stylesheet" href="/css /login.css">
     <link rel="icon" type="image/x-icon" href="../css/images/Fav.ico">
-  <title>Login Page</title> 
 </head>
 <body>
   <div class="Layout">
